--- a/ArmaTuFecha/src/main/resources/templates/listado-locales.html
+++ b/ArmaTuFecha/src/main/resources/templates/listado-locales.html
@@ -11,17 +11,6 @@
 <title>Lugares donde tocar</title>
 
 
-<!-- Bootstrap core CSS -->
-<link rel="stylesheet"
-	href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
-	integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
-	crossorigin="anonymous"></link>
-
-<!-- Custom styles for this template -->
-<link href="/css/3-col-portfolio.css" rel="stylesheet"></link>
-<link href="/css/scrolling-nav.css" rel="stylesheet"></link>
-<link rel="stylesheet" type="text/css" href="/css/estilos.css"></link>
-
 
 </head>
 
@@ -129,6 +118,19 @@
 	<!-- /.row -->
 
 	<!-- Pagination -->
+	hola
+	<ul class="pagination justify-content-center" layout:fragment="paginacion">
+		<li class="page-item"><a class="page-link" href="#"
+			aria-label="Previous"> <span aria-hidden="true">&laquo;</span> <span
+				class="sr-only">Previous</span>
+		</a></li>
+		<li th:each="perfilLocal, iterador:${listadoLocales}" class="page-item"><a th:text="${iterador.index}"  class="page-link"  th:href="'/listado-locales/' + ${iterador.index}">1</a></li>
+		
+		<li class="page-item"><a class="page-link" href="#"
+			aria-label="Next"> <span aria-hidden="true">&raquo;</span> <span
+				class="sr-only">Next</span>
+		</a></li>
+	</ul>
 
 
 	<!-- /.container -->
@@ -136,18 +138,7 @@
 	<!-- Footer -->
 	
 
-	<!-- Bootstrap core JavaScript -->
-	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-		crossorigin="anonymous"></script>
-	<script
-		src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
-		integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-		crossorigin="anonymous"></script>
-	<script
-		src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"
-		integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
-		crossorigin="anonymous"></script>
+	
 
 
 </body>
